# intel-8080-emu

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_CMake.yml  cmake.yml
include/: cpuimpl.hpp  emulator.hpp  ioport.hpp  oputils.hpp
src/: emulator.cpp  main.cpp  oputils.cpp
